--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
+    "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
