--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,8 +9,15 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "google-touch-icon.png",
+      "src": "/google-touch-icon.png",
+      "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "maskable_icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
