--- a/package.json
+++ b/package.json
@@ -21,8 +21,18 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
+    "commitlint-config-gitmoji": "^2.2.5",
+    "husky": "^7.0.0",
     "typescript": "^4.2.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
